--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "js-yaml": "^3.13.1",
     "luxon": "^1.22.0",
     "node-fetch": "^2.6.0"
+  },
+  "dependencies": {
+    "axios": "^0.21.1"
   }
 }
