--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "This is a forked repository from the LinkedIn Learning course **Building Serverless Apps with JAMStack and Eleventy**. The full course is available from [LinkedIn Learning](<[http://linkedin](https://www.linkedin.com/learning/)>).",
   "scripts": {
-    "start": "eleventy --serve --quiet"
+    "start": "eleventy --serve --quiet",
+    "build": "eleventy"
   },
   "author": "Your Name Here",
   "devDependencies": {
